--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
         <h2>I hope yall are having an amazing day. Here is a link below for you guys to click on </h2><br>
         <a href = "https://youtu.be/k2allBowwCo?si=sFEZ5CUuhee9rkEG">One of my favorite songs</a><br>
         
-        <img src="C:\Users\sophi\Downloads\your-name-shooting-6016x3384-14938.jpg" width="400" height = "200">
+        <img src="https://miro.medium.com/v2/resize:fit:7680/1*Xedq1HEeIMyIOgVRLL1ZDA.png" width="400" height = "200">
     </body>
 </html>
