--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>MI 103 HTML Homework</title>
+        <title>about Sophia Phan</title>
     </head>
     <body>
-        <h1 style = "font-family:'Courier New', Courier, monospace;">Hello MI 103 Class :D</h1>
-        <h2>I hope yall are having an amazing day. Here is a link below for you guys to click on </h2><br>
-        <a href = "https://youtu.be/k2allBowwCo?si=sFEZ5CUuhee9rkEG">One of my favorite songs</a><br>
+        <h1 style = "font-family:'Courier New', Courier, monospace;">About Sophia Phan</h1>
+        <img src="sophiaphoto.jpg.jpg" width="400" height = "200">
+        <h3>A Little Bit About Me</h3><br>
+        <p>Hi! I'm Sophia Phan and I'm currently a sophomore here at MSU. I'm a Games and Interactive Media major with an interest in the
+            Graphics and Animation dicipline.
+        </p>
+        <h2>Currently Playing</h2>
+        <p>These are the games I'm currently playing in my free time.</p>
+        <h3>Valorant</h3>
+        <h3>League of Legends</h3>
+        <h3>Apex Legends</h3>
+        <h3>Left 4 Dead 2</h3>
+        <h3>Infinity Nikki</h3>
+
+        <h2>Wiki Links</h2>
+        <p>Here are Wiki Linsk to the games I'm currently playing</p>
+        <ol>
+            <li><a href="https://en.wikipedia.org/wiki/Valorant">Valorant</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/League_of_Legends">League of Legends</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Apex_Legends">Apex Legends</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Left_4_Dead_2">Left 4 Dead 2 </a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Infinity_Nikki">Infinity Nikki</a></li>
+        </ol>
         
-        <img src="https://miro.medium.com/v2/resize:fit:7680/1*Xedq1HEeIMyIOgVRLL1ZDA.png" width="400" height = "200">
     </body>
 </html>
