--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h3>League of Legends</h3>
         <h3>Apex Legends</h3>
         <h3>Left 4 Dead 2</h3>
-        <h3>Infinity Nikki</h3>
+        <h3>Infinity Nikki</h3><br>
 
         <h2>Wiki Links</h2>
         <p>Here are Wiki Linsk to the games I'm currently playing</p>
