--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <h1 style = "font-family:'Courier New', Courier, monospace;">About Sophia Phan</h1>
         <img src="sophiaphoto.jpg.jpg" width="400" height = "400">
-        <h3>A Little Bit About Me</h3><br>
+        <h3>A Little Bit About Me</h3>
         <p>Hi! I'm Sophia Phan and I'm currently a sophomore here at MSU. I'm a Games and Interactive Media major with an interest in the
             Graphics and Animation dicipline.
         </p>
